# prove-on-pairing

./: Cargo.toml  README.md  l1.txt  l2.txt
docs/: BLS12-381.md  Tate Pairing and Miller Loop.md  verifacation_on_pairing.md
src/: circuit.rs  compute_lambda_residues.rs  constant.rs  curves.rs  dummy_circuit.rs  ell_coeffs.rs  fields.rs  final_exp_verifier.rs  groth16_pairing_verifier.rs  groth16_verifier.rs  lambda_residues.rs  lib.rs  line_precompute.rs  miller_lines.rs  miller_loop_verify.rs  optimal_ate.rs  pairing_verifier.rs  pairing_verify.rs  params.rs  precompute_lines.rs  tests.rs  utils.rs
src/poc/: constants.rs  miller_lines.rs  mod.rs  optimal_ate.rs  pairing_verifier.rs  utils.rs
