[package]
name = "prove-on-pairing"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["snark", "sponge"] }

num-bigint = "0.4.4"
num-traits = "0.2.18"
once_cell = "1.19.0"
ark-bn254 = { version = "0.4.0", features = ["curve"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

ark-groth16 = "*"
itertools = "0.10.5"

[patch.crates-io]
ark-ff = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
ark-ec = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
ark-serialize = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
ark-poly = { git = "https://github.com/zulu-network/arkworks-algebra.git",  branch = "bitvm"}
